# nebul-genai

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: test.yml
src/nebul_genai/base/: __init__.py  base_chunker.py  base_loader.py
src/nebul_genai/base/chunker/: header_chunker.py
src/nebul_genai/chunker/: header_chunker.py
src/nebul_genai/loader/: pypdf2_loader.py
src/nebul_genai/types/: __init__.py  chunk.py  document.py
tests/: conftest.py
tests/types/: test_chunk.py  test_document.py
